more tests and issues fixed